Bump PlantUML version to plantuml-asl-1.2022.5 (#411)