@@ -45,7 +45,6 @@ import net.sourceforge.plantuml.graphic.UDrawable;
 import net.sourceforge.plantuml.security.SImageIO;
 import net.sourceforge.plantuml.ugraphic.AffineTransformType;
 import net.sourceforge.plantuml.ugraphic.PixelImage;
-import net.sourceforge.plantuml.ugraphic.UGraphic;
 import net.sourceforge.plantuml.ugraphic.UImage;
 
 public class PSystemDedication extends PlainDiagram {
@@ -59,17 +58,13 @@ public class PSystemDedication extends PlainDiagram {
 
 	@Override
 	protected UDrawable getRootDrawable(FileFormatOption fileFormatOption) {
-		return new UDrawable() {
-			public void drawU(UGraphic ug) {
-				ug.draw(new UImage(new PixelImage(img, AffineTransformType.TYPE_BILINEAR)));
-			}
-		};
+		return ug -> ug.draw(new UImage(new PixelImage(img, AffineTransformType.TYPE_BILINEAR)));
 	}
 
 	public static BufferedImage getBufferedImage(InputStream is) {
 		try {
 			final Class<?> clVP8Decoder = Class.forName("net.sourceforge.plantuml.webp.VP8Decoder");
-			final Object vp8Decoder = clVP8Decoder.newInstance();
+			final Object vp8Decoder = clVP8Decoder.getDeclaredConstructor().newInstance();
 			// final VP8Decoder vp8Decoder = new VP8Decoder();
 			final Method decodeFrame = clVP8Decoder.getMethod("decodeFrame", ImageInputStream.class);
 			final ImageInputStream iis = SImageIO.createImageInputStream(is);
